# Plugin-Crypto

./: .gitignore  LICENSE  README.md
docs/: API.md  ARQUITETURA.md  COMPILACAO.md  D7-stack-7-camadas.md  FLUXOS.md  GUIA_TESTES.md  MODULOS.md
docs/images/: diagram_01.mmd  diagram_02.mmd  diagram_03.mmd  diagram_04.mmd  diagram_05.mmd  diagram_06.mmd  diagram_07.mmd  diagram_08.mmd
plugin_crypto/: .pubignore  CHANGELOG.md  README.md  analysis_options.yaml  dart_test.yaml  pubspec.yaml  tcc_metrics_report.json  tcc_openssl_cli_metrics.json  tcc_pq_metrics.json
plugin_crypto/android/: build.gradle.kts  settings.gradle.kts
plugin_crypto/example/: pubspec.yaml
plugin_crypto/ios/: README.md  plugin_crypto.podspec.template
plugin_crypto/lib/: plugin_crypto.dart  plugin_crypto_method_channel.dart  plugin_crypto_platform_interface.dart
plugin_crypto/linux/: CMakeLists.txt  plugin_crypto_plugin.cc  plugin_crypto_plugin_private.h
plugin_crypto/test/: flutter_test_config.dart  memory_tracker_test.dart  metrics_collector_test.dart  metrics_concurrency_test.dart  metrics_constant_time_test.dart  metrics_fuzzing_test.dart  metrics_kat_test.dart  metrics_openssl_cli_test.dart  metrics_pq_test.dart  metrics_security_benchmark_test.dart  metrics_timing_test.dart  metrics_zeroization_test.dart  plugin_crypto_method_channel_test.dart  test_fixtures.dart  zone01_native_loader_test.dart  zone02_hash_test.dart  zone03_random_test.dart  zone04_aes_cbc_test.dart  zone05_aes_gcm_test.dart  zone06_rsa_test.dart  zone07_ecdsa_test.dart  zone08_x509_test.dart  zone09_cms_test.dart  zone10_error_handling_test.dart  zone11_cms_encrypt_decrypt_test.dart  zone11_deprecation_audit_test.dart  zone12_error_handling_extended_test.dart  zone13_aes_cbc_edge_test.dart  zone14_random_edge_test.dart  zone15_hash_boundary_test.dart  zone16_rsa_edge_test.dart  zone17_ecdsa_edge_test.dart  zone18_x509_edge_test.dart  zone19_key_creation_flow_test.dart  zone20_certificate_creation_flow_test.dart  zone21_file_signing_flow_test.dart  zone24_crl_test.dart  (+18 more)
plugin_crypto/windows/: CMakeLists.txt  plugin_crypto_plugin.cpp
plugin_crypto/windows/include/plugin_crypto/: plugin_crypto_plugin.h
tcc_test_app/: android_benchmark.json  pubspec.yaml
tool/: reproduce_all.sh
(+127 files in other folders)
